// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepList > renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          Item 1 small
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
